fix groupbuy photo layout bug

--- a/page/css/groupinfo.css
+++ b/page/css/groupinfo.css
@@ -35,6 +35,10 @@
 	top: -4px;
 }
 
+#groupbuyPhoto {
+	border-radius: 5px;
+}
+
 #goodsList{
 	margin-left: -10px;
 	padding: 10px;
